--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bootstrap",
-  "description": "The most popular front-end framework for developing responsive, mobile first projects on the web.",
+  "name": "bootstrap-ninja",
+  "description": "An empowered version of the popular front-end framework for developing responsive, mobile first projects on the web.",
   "version": "5.3.2",
   "config": {
     "version_short": "5.3"
@@ -14,8 +14,8 @@
     "framework",
     "web"
   ],
-  "homepage": "https://getbootstrap.com/",
-  "author": "The Bootstrap Authors (https://github.com/twbs/bootstrap/graphs/contributors)",
+  "homepage": "https://bootstrap.ninja/",
+  "author": "The LiveCanvas Team",
   "license": "MIT",
   "repository": {
     "type": "git",
