--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "bootstrap-ninja",
-  "description": "An empowered version of the popular front-end framework for developing responsive, mobile first projects on the web.",
-  "version": "5.3.2",
+  "name": "ninjabootstrap",
+  "description": "An empowered version of Bootstrap 5.3.2, the popular front-end framework for developing responsive, mobile first projects on the web.",
+  "version": "1.0.0",
   "config": {
-    "version_short": "5.3"
+    "version_short": "1.0"
   },
   "keywords": [
     "css",
